src/OcctNative/OcctNative.h

    struct OcctPoint3d { double x; double y; double z; };
    struct OcctVector3d { double x; double y; double z; };
    // Boolean and feature operations.
    OCCTBRIDGE_API OcctObjectId occt_boolean(OcctHandle handle, int operation, OcctObjectId leftId, OcctObjectId rightId, int hideInputs);
    OCCTBRIDGE_API OcctObjectId occt_extrude(OcctHandle handle, OcctObjectId profileId, OcctVector3d vector, int hideInput);
    OCCTBRIDGE_API OcctObjectId occt_revolve(OcctHandle handle, OcctObjectId profileId, OcctPoint3d axisPoint, OcctVector3d axisDirection, double angleDegrees, int hideInput);
    OCCTBRIDGE_API OcctObjectId occt_sweep(OcctHandle handle, OcctObjectId spineWireId, OcctObjectId profileId, int hideInputs);
    OCCTBRIDGE_API OcctObjectId occt_loft(OcctHandle handle, const OcctObjectId* wireIds, int count, int makeSolid, int ruled, double tolerance, int hideInputs);
    OCCTBRIDGE_API OcctObjectId occt_fillet_all_edges(OcctHandle handle, OcctObjectId shapeId, double radius, int hideInput);
    OCCTBRIDGE_API OcctObjectId occt_chamfer_all_edges(OcctHandle handle, OcctObjectId shapeId, double distance, int hideInput);
    OCCTBRIDGE_API OcctObjectId occt_offset_shape(OcctHandle handle, OcctObjectId shapeId, double offset, double tolerance, int hideInput);
    OCCTBRIDGE_API OcctObjectId occt_thick_solid(OcctHandle handle, OcctObjectId solidId, int faceIndexToRemove, double thickness, double tolerance, int hideInput);
    // Text and dimensional annotations.
    OCCTBRIDGE_API OcctObjectId occt_make_text_shape(OcctHandle handle, const char* utf8Text, OcctPoint3d position, OcctVector3d normal, OcctVector3d xDirection, double height, double extrusionDepth, const char* utf8FontName, int bold, int italic);
    OCCTBRIDGE_API OcctObjectId occt_make_length_annotation_shape(OcctHandle handle, OcctObjectId edgeId, double flyout, double textHeight, double arrowSize, const char* utf8FontName);
    OCCTBRIDGE_API OcctObjectId occt_make_angle_annotation_shape(OcctHandle handle, OcctObjectId firstEdgeId, OcctObjectId secondEdgeId, double radius, double textHeight, double arrowSize, const char* utf8FontName);
    OCCTBRIDGE_API OcctObjectId occt_make_radius_annotation_shape(OcctHandle handle, OcctObjectId circularEdgeId, double flyout, double textHeight, double arrowSize, const char* utf8FontName);
    OCCTBRIDGE_API OcctObjectId occt_make_diameter_annotation_shape(OcctHandle handle, OcctObjectId circularEdgeId, double flyout, double textHeight, double arrowSize, const char* utf8FontName);
    OCCTBRIDGE_API OcctObjectId occt_add_text(OcctHandle handle, const char* utf8Text, OcctPoint3d position, double height, double r, double g, double b, int zoomable);
    OCCTBRIDGE_API int occt_set_text(OcctHandle handle, OcctObjectId textId, const char* utf8Text);
    OCCTBRIDGE_API int occt_set_text_position(OcctHandle handle, OcctObjectId textId, OcctPoint3d position);
    OCCTBRIDGE_API int occt_set_text_height(OcctHandle handle, OcctObjectId textId, double height);
    OCCTBRIDGE_API int occt_set_text_font(OcctHandle handle, OcctObjectId textId, const char* utf8FontName);
    OCCTBRIDGE_API int occt_set_text_angle(OcctHandle handle, OcctObjectId textId, double angleDegrees);
    OCCTBRIDGE_API int occt_set_text_zoomable(OcctHandle handle, OcctObjectId textId, int zoomable);
    OCCTBRIDGE_API int occt_set_dimension_flyout(OcctHandle handle, OcctObjectId dimensionId, double flyout);
    OCCTBRIDGE_API OcctObjectId occt_add_length_dimension(OcctHandle handle, OcctObjectId edgeId, double flyout, double r, double g, double b);
    OCCTBRIDGE_API OcctObjectId occt_add_angle_dimension(OcctHandle handle, OcctObjectId firstEdgeId, OcctObjectId secondEdgeId, double flyout, double r, double g, double b);
    OCCTBRIDGE_API OcctObjectId occt_add_radius_dimension(OcctHandle handle, OcctObjectId circularShapeId, double flyout, double r, double g, double b);
    OCCTBRIDGE_API OcctObjectId occt_add_diameter_dimension(OcctHandle handle, OcctObjectId circularShapeId, double flyout, double r, double g, double b);
    // BREP / STEP / IGES / STL IO.
    OCCTBRIDGE_API OcctObjectId occt_import_file(OcctHandle handle, const char* utf8Path);
    OCCTBRIDGE_API OcctObjectId occt_import_step(OcctHandle handle, const char* utf8Path);
    OCCTBRIDGE_API OcctObjectId occt_import_iges(OcctHandle handle, const char* utf8Path);
    OCCTBRIDGE_API OcctObjectId occt_import_brep(OcctHandle handle, const char* utf8Path);
    OCCTBRIDGE_API OcctObjectId occt_import_stl(OcctHandle handle, const char* utf8Path);
    OCCTBRIDGE_API int occt_export_step(OcctHandle handle, OcctObjectId shapeId, const char* utf8Path);
    OCCTBRIDGE_API int occt_export_all_step(OcctHandle handle, const char* utf8Path);
    OCCTBRIDGE_API int occt_export_iges(OcctHandle handle, OcctObjectId shapeId, const char* utf8Path);
    OCCTBRIDGE_API int occt_export_all_iges(OcctHandle handle, const char* utf8Path);
    OCCTBRIDGE_API int occt_export_brep(OcctHandle handle, OcctObjectId shapeId, const char* utf8Path);
    OCCTBRIDGE_API int occt_export_stl(OcctHandle handle, OcctObjectId shapeId, const char* utf8Path, double linearDeflection, double angularDeflection, int asciiMode);